tests/negative/neg_own_observe_mutate.safe
-- Test: neg_own_observe_mutate
-- Description: Mutating the designated object through an observer.
--   An observer (access constant) should provide read-only access.
--   Writing through it violates the observation contract.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a:5bc5ab8b
-- Expected: REJECT observe_mutation

package observe_Mutate_Test

   type config is record
      rate : natural;


   type config_Ptr is access config;

   --  Mutate_Through_Observer: attempts to write via a constant access.
   function mutate_Through_Observer
      Owner    : config_Ptr = new ((rate = 100) as config);
      Observer : access constant config = Owner.access;  -- observe

      --  Observer is access constant; writing through it is illegal.
      Observer.rate = 200;  -- ERROR: mutation through observer



